regresión todos los años y check paper

--- a/paper.Rmd
+++ b/paper.Rmd
@@ -31,7 +31,9 @@ La desigualdad económica es un tema que se ha tomado la agenda nacional e inter
 
 Las aproximaciones tradicionales de disciplinas como la economía han puesto el énfasis en la medición de la desigualdad objetiva vía ingresos, mientras la sociología se ha caracterizado por el estudio de clases ocupacionales y movilidad social. También desde la sociología han surgido perspectivas que enfatizan el rol de la subjetividad, relevando aspectos como la medida en que esta desigualdad es percibida y eventualmente rechazada (o justificada) por los individuos  [@castillo_inequality_2012; @mac-clure_Judgments_2015]. El foco en percepciones, justificaciones y preferencias respecto de desigualdad ha emergido con fuerza durante la última década [@mccall_undeserving_2013-1; @alesina_preferences_2011; @rueda_Who_2019], caracterizada por crisis sociales a nivel internacional que plantean claras demandas por la reducción de la desigualdad económica.
 
-Volviendo al caso particular de Chile y sus reivindicaciones sociales actuales, emergen visiones contrapuestas. Por un lado se señala que Chile a transitado un proceso de modernización exitoso y ejemplar en América Latina, aumentando significativamente su crecimiento económico y a la vez con una disminución de la desigualdad medida mediante el índice de Gini, tal como se muestra en las siguientes figuras:
+Volviendo al caso particular de Chile y sus reivindicaciones sociales actuales, es posible identificar visiones contrapuestas. Por un lado se señala que Chile a transitado un proceso de modernización exitoso y ejemplar en América Latina, aumentando significativamente su crecimiento económico y a la vez con una disminución de la desigualdad medida mediante el índice de Gini, tal como se ilustra a continuación:
+
+**Figura 1**: Evolución de crecimiento económico (PIB) y desigualdad en países de América Latina
 
 <iframe width="400" height="325" frameborder="0" scrolling="no" marginwidth="0" marginheight="0" src="https://www.google.com/publicdata/embed?ds=d5bncppjof8f9_&amp;ctype=l&amp;strail=false&amp;bcs=d&amp;nselm=h&amp;met_y=ny_gdp_pcap_kd&amp;scale_y=lin&amp;ind_y=false&amp;rdim=region&amp;idim=country:CHL:COL:PER:ARG:MEX&amp;ifdim=region&amp;tstart=126932400000&amp;tend=1483930800000&amp;hl=es&amp;dl=es&amp;ind=false"></iframe>
 
@@ -39,17 +41,17 @@ Volviendo al caso particular de Chile y sus reivindicaciones sociales actuales, 
 
 <br>
 
-Por otro lado, se plantea que las cifras macroeconómicas no reflejan la realidad cotidiana del país, caracterizada por una privatización y precarización en ámbitos clave de la política social como salud, educación y pensiones, además de un contexto creciente de abusos, corrupción y desigualdad en el trato [@larranaga_Desiguales_2017], como se presenta a continuación en la figura X:
+Por otro lado, se plantea que las cifras macroeconómicas no reflejan la realidad cotidiana del país, caracterizada por una privatización y precarización en ámbitos clave de la política social como salud, educación y pensiones, además de un contexto creciente de abusos, corrupción y desigualdad en el trato [@larranaga_Desiguales_2017]. Esto ha sido documentado en una serie de estudios, tal como el informe llamado Desiguales, del Programa de las Naciones Unidas para el Desarrollo:
+
+**Figura 2**: Razones percibidas por las que se reciben malos tratos
 
 ![](input/images/tratoPNUD.png){ width=80%}
 
-Ante la paradoja de mejoras en aspectos objetivos acompañados de un fuerte malestar subjetivo, surge la pregunta sobre el vínculo entre la desigualdad económica y su justificación: ¿Se percibe en Chile un cambio en los niveles de desigualdad? ¿Ha disminuido la tolerancia/justificación de la desigualdad en Chile? ¿Cómo se relacionan los cambios en la justificación de desigualdad con preferencias por redistribución económica?
+Ante la paradoja de mejoras en aspectos objetivos acompañados de un fuerte malestar subjetivo, surge la pregunta sobre el vínculo entre la desigualdad económica y su justificación: _¿Se percibe en Chile un cambio en los niveles de desigualdad? ¿Ha disminuido la tolerancia/justificación de la desigualdad en Chile? ¿Cómo se relacionan los cambios en la justificación de desigualdad con preferencias por redistribución económica?_
 
-El presente trabajo representa la proyección de una línea de trabajo sobre percepción y justificación de desigualdad en Chile iniciada el año 2009 [@castillo_cual_2009; @castillo_inequality_2012]. Parte de estos trabajos han analizado cambios en percepción y justificación de desigualdad entre 1999 y 2009, y este trabajo avanza en dos dimensiones: a) se agrega una década más al análisis gracias a la reciente disponibilidad de los datos para Chile del estudio ISSP 2019 (International Social Survey Programme - www.issp.org), y b) se analiza en qué medida las percepciones y justificaciones de desigualdad se asocian a preferencias por la redistribución económica.
+El presente trabajo representa la proyección de una línea de investigación sobre percepción y justificación de desigualdad en Chile iniciada el año 2009 [@castillo_cual_2009; @castillo_inequality_2012]. Parte de estos estudios han analizado dimensiones subjetivas de la desigualdad entre 1999 y 2009, y en este documento se prentende avanzar agregando una década más al análisis gracias a la reciente disponibilidad de los datos para Chile del estudio ISSP 2019 (International Social Survey Programme - www.issp.org).
 
-El trabajo comienza dando un contexto de los estudios sobre aspectos subjetivos de la desigualdad. Luego se presentan inicialmente descriptivos sobre percepción y justificación de desigualdad salarial entre 1999 y 2019, para luego finalizar con algunos modelos que permiten contrastar hipótesis sobre la relación entre percepción y justificación de desigualdad en el tiempo, así como también su vínculo con preferencias por la redistribución.
-
-Los datos de esta encuesta ofrecen una oportunidad única de analizar en el país en qué medida aumenta o disminuye la percepción de desigualdad, así como también su justificación. Este trabajo tiene sus antecedentes principales que analizan el período 1999-2009 [@castillo_inequality_2012], y que ahora se extiende una década más hasta 2019.
+El trabajo comienza dando un contexto de los estudios sobre aspectos subjetivos de la desigualdad. Luego se presentan inicialmente descriptivos sobre percepción y justificación de desigualdad salarial entre 1999 y 2019, para luego finalizar con algunos modelos que permiten contrastar hipótesis sobre la relación entre percepción y justificación de desigualdad en el tiempo.
 
 El documento se estructura de la siguiente manera: en primer lugar se entregarán ciertos antecedentes conceptuales y empíricos para el estudio de percepción y justificación de desigualdad, para luego mostrar resultados comparativos en el tiempo. En la segunda parte se le dará énfasis a las relaciones de estatus objetivo y subjetivo con la percepción de desigualdad y también a los cambios de estas relaciones en el tiempo.
 
@@ -59,28 +61,33 @@ Los estudios de desigualdad y justicia social han sido nutridos desde múltiples
 
 Desde la sociología se ha dado tradicionalmente un acento empírico al estudio de la desigualdad. Esta disciplina no solo tempranamente abordó el estudio de la distribución objetiva de los recursos en una población, sino que también pueden observarse reflexiones en torno al modo en cómo los sujetos perciben y  justifican la desigualdad existente [@kluegel_beliefs_1986; @kluegel_social_1995-1; @huber_Income_1973; @mason_Marketing_2000; @mau_Ungleichheitsund_1997; @stollte_Legitimation_1983]. De manera más reciente, se han incorporado a este tipo de estudios el concepto de actitudes y percepciones hacia la desigualdad económica, relacionando dichos conceptos con la justificación de la desigualdad [@ardanaz_preferences_2009; @evans_justifications_2010; @gijsberts_legitimation_1999-1; @hadler_why_2005; @janmaat_subjective_2013-1; @kenworthy_inequality_2007; @kuhn_subjective_2005; @liebig_justice_2013] .
 
-El estudio de la desigualdad en términos subjetivos se puede abordar desde distintas perspectivas y metodologías. Una línea que posee un claro énfasis comp}arativo internacional es la que se establece mediante el International Social Justice Project, que realiza la primera encuesta comparativa internacional en temas de justicia y desigualdad en países capitalistas y postcomunistas en el año 1991 [@kluegel_social_1995-1]. Desde ese entonces un desafío en este tipo de investigación tiene que ver con la manera de abordar el tema de desigualdad. Una de las principales limitaciones de preguntas directas acerca de desigualdad (en particular sobre desigualdad percibida) es que la mayor parte de la población actualmente tiende  declarar una alta desigualdad, generando escasa variabilidad y por lo tanto haciendo difícil capturar diferencias entre personas y en el tiempo  [@castillo_percepcion_2012]. Al respecto, una posible alternativa para analizar tanto percepción como justificación de desigualdad mediante encuestas consiste en medidas indirectas de desigualdad salarial subjetiva, conocidas como brechas salariales percibidas y justas [@castillo_cual_2009]:
+El estudio de la desigualdad en términos subjetivos se puede abordar desde distintas perspectivas y metodologías. Una línea que posee un claro énfasis comparativo es la que se establece mediante el International Social Justice Project, que realiza la primera encuesta comparativa internacional en temas de justicia y desigualdad en países capitalistas y postcomunistas en el año 1991 [@kluegel_social_1995-1]. Desde ese entonces un desafío en este tipo de investigación tiene que ver con la manera de abordar el tema de desigualdad. Uno de estos desafíos se refiere a qué preguntar respecto de la desigualdad, ya que en general la mayor parte de la población actualmente tiende  declarar una alta desigualdad, generando escasa variabilidad y por lo tanto haciendo difícil capturar diferencias entre personas y en el tiempo  [@castillo_percepcion_2012]. Al respecto, una posible alternativa para analizar tanto percepción como justificación de desigualdad mediante encuestas consiste en medidas indirectas de desigualdad salarial subjetiva, conocidas como brechas salariales percibidas y justas [@castillo_cual_2009]:
+
+**Figura 3**: Diagrama de brechas salariales [@castillo_inequality_2012]
 
 ![](input/images/gaps.png){ width=70% }
 
-Para ello, se utilizan preguntas respecto de salarios percibidos y justos en relación a ocupaciones que expresan los extremos del continuo de estatus, como obrero y gerente. Las respuestas son registradas como una magnitud en pesos, y luego con estas respuestas es posible elaborar las brechas percibidas y justas, dividiendo el monto otorgado al gerente por el monto del obrero. Esta magnitud expresa cuánto más se percibe o justifica que un gerente gana respecto de un obrero.
+Para poder operacionalizar estas brechas, se utilizan preguntas respecto de salarios percibidos y justos en relación a ocupaciones que expresan los extremos del continuo de estatus, como obrero y gerente. Las respuestas son registradas como una magnitud en pesos, y luego con estas respuestas es posible elaborar las brechas percibidas y justas, dividiendo el monto otorgado al gerente por el monto del obrero. Esta magnitud expresa cuánto más se percibe o justifica que un gerente gana respecto de un obrero.
 
-La evidencia anterior comparando datos de Chile para 1999 y 2009 indica que si bien existen cambios en los montos absolutos de salarios percibidos y justos en el tiempo, las brechas tanto percibidas como justas se mantienen en el tiempo. Además, tomando como base estudios que vinculan variables de estatus con percepción de desigualdad [@castillo_percepcion_2012; @wegener_equity_1990], se plantea que aquellos en el extremo superior de estatus poseen información más precisa de salarios de ocupaciones de mayor prestigio, y por lo tanto su brecha salarial percibida será mayor.
+La evidencia anterior comparando datos de Chile para 1999 y 2009 indica que si bien existen cambios en los montos absolutos de salarios percibidos y justos, las brechas tanto percibidas como justas se mantienen en el tiempo. Además, tomando como base estudios que vinculan variables de estatus con percepción de desigualdad [@castillo_percepcion_2012; @wegener_equity_1990], se plantea que aquellos en el extremo superior de estatus poseen información más precisa de salarios de ocupaciones de mayor prestigio, y por lo tanto su brecha salarial percibida será mayor.
 
-[argumento percepción-justificación]
-
-
+<!-- [argumento percepción-justificación]
+-->
+<!--
 ## Desigualdad subjetiva y redistribución
 
 Las preferencias por la redistribución constituyen un ámbito de investigación que concentra creciente atención. Dada la crisis del capitalismo global y la creciente concentración de ingresos, la opinión de las y los ciudadanos respecto de cómo se deberían redistribuir los recursos desde quienes poseen más hacia quienes poseen menos se vuelve central [@alesina_preferences_2011; @alt_inequality_2017; @rueda_Who_2019]. Las preferencias aparecen como un termométro social que indica la temperatura de la sociedad respecto de la temática de la desigualdad y la demanda ciudadana por bienestar (Soroka & Wlezien, 2009). Junto a ello, la opinión pública también juega el rol de un actor que puede tanto promover como bloquear cambios a las reglas del juego en una sociedad (Jensen & Naumann, 2016; Pierson, 1996)
 
 En general las teorías respecto a los determinantes de las preferencias consideran dos vertientes: el interés racional y el altruismo. La hipótesis de interes racional basada en un modelo de _homo-economicus_ señala que las preferencias por la redistribución tienen que ver con un cálculo personal de beneficios y riesgos, por lo tanto quienes se beneficien menos de políticas redistributivas (aquellos de mayor estatus) tenderán a manifestar un mejor apoyo a la redistribución. Por otro lado, la versión altruista o de _homo-sociologicus_ señala que valores de recirpocidad e igualitarismo son centrales, llevando a un apoyo transversal por la redistribución [@Dimick2018ModelsOtherRegardingPreferences]. Si bien no contamos con antecedentes respecto de la relación entre brechas salariales subjetivas y preferencias redistributivas, es posible plantear que una alta desigualdad percibida llevará a un mayor apoyo hacia la redistribución.
+-->
+
 
 # Datos, variables y métodos
 
-- por elaborar, Francisco - tomar como referencia @castillo_inequality_2012]
-- incluir tabla descriptivos (`stargazer`)
+- por elaborar - tomar como referencia @castillo_inequality_2012]
 
+
+- incluir tabla descriptivos (`stargazer`), Tabla 1
 
 # Resultados
 
@@ -98,34 +105,27 @@ Ahora bien, ¿qué tanto calza la percepción de desigualdad con la mediana real
 
 Resulta interesante que la mediana del salario el obrero se aproxima bastante al monto del salario real del año respectivo. Esto nos lleva a deducir dos cosas: primero, las personas son conscientes en general de los montos de salario mínimo y, segundo, que asocian el salario de un obrero al salario mínimo. En cuanto al salario percibido para el gerente, vemos que es en general subestimado en todos los años y además con un creciente aumento en este sesgo perceptual. Es relevante considerar además que el salario percibido del gerente posee una mayor varianza que el del obrero, lo que indica que hay un menor consenso en la población respecto a cuánto ganan las personas en estas ocupaciones. Esto puede deberse a los distintos tipos de gerente que se están imaginando las personas al responder. Por ejemplo, según el estudio de la empresa internacional @roberthalf_Guia_2019 (encargada de reclutar de gerentes para el área de finanzas) en Chile el salario de un director de finanzas de una PYME o mediana empresa varía entre $5.000.000 y $9.500.000, mientras que el gerente de una gran empresa (sobre UF 100.000) gana entre $6.800.000 y $15.500.000 en promedio. Esto nos demuestra que existe gran diferencia entre un alto cargo de una empresa pequeña en relación con los altos cargos de una gran empresa.
 
-En suma, tenemos que ha aumentado la percepción de ambos salarios. Estos salarios percibidos no escapan radicalmente de la realidad, ya que coinciden con el salario mínimo y con el salario que ganan los gerentes, pero que en el caso de los gerentes muestran una mayor variabilidad.
+En suma, tenemos que ha aumentado la percepción de dalarios de ocupaciones de bajo y alto estatus. Estos salarios percibidos no escapan radicalmente de la realidad, ya que coinciden con el salario mínimo establecido para Chile en el año respectivo así como también con la información disponible respecto a el salario que ganan los gerentes, pero sin embargo en el caso de los gerentes se aprecia una mayor variabilidad.
 
 ## Salarios justos
 
 Pasando de la percepción de salarios al análisis de salarios considerados justos, el siguiente gráfico nos muestra las medianas de los salarios justos para obrero y gerente en los tres puntos en el tiempo analizados:
 
-**Grafico X: Salario justo para un obrero y un gerente entre 1999 y 2019**
+![**Grafico 2**: Salario justo para un obrero y un gerente entre 1999 y 2019](output/images/salario_justo.png)
 
-![](output/images/salario_justo.png)
+Como puede verse en el Gráfico 2, en los salarios considerados justos existe una notoria diferencia entre obreros y gerentes en todos los años. Esto nos sugiere que la completa igualdad salarial no es considerada justa por el grueso de la población, sino más bien existe un cierto nivel de desigualdad salarial que alcanza a ser tolerado o justificado, lo que analizaremos más adelante al momento de considerar las brechas percibidas y justas. No obstante, tomando en consideración el análisis anterior de salarios percibidos, se observa que los salarios considerados justos para los obreros son siempre mayores que los salarios percibidos para los mismos, así como el salario justo para el gerente es menor que el percibido. Por lo tanto, si bien la igualdad absoluta no es considerada justa, ciertamente se evidencia una tendencia hacia la disminución de las diferencias salariales como criterio de justicia en todos los años analizados.
 
-Como puede verse en el Gráfico 2, en los salarios considerados justos existe una notoria diferencia entre obreros y gerentes en todos los años. Esto nos sugiere que la completa igualdad igualdad salarial no es considerada justa por el grueso de la población, sino más bien existe un cierto nivel de desigualdad salarial que alcanza a ser tolerado o justificado, lo que analizaremos más adelante al momento de considerar las brechas percibidas y justas. No obstante, tomando en consideración el análisis anterior de salarios percibidos, se observa que los salarios considerados justos para los obreros son siempre mayores que los salarios percibidos para los mismos, así como el salario justo para el gerente es menor que el percibido. Por lo tanto, si bien la igualdad absoluta no es considerada justa, ciertamente se evidencia una tendencia hacia la disminución de las diferencias salariales como criterio de justicia.
-
-Si tomamos como referencia el año actual, podemos decir que el salario considerado justo para un obrero es de $500.000 en promedio. Este valor, a diferencia del salario mínimo, se encuentra sobre la línea de la pobreza para una familia de 4 personas, la cual es equivalente actualmente a $440.000. Con esto no queremos decir que las personas son conscientes de la línea de la pobreza establecida periódicamente por el ministerio de desarrollo social [XX cita  ], sino que las personas parecen poseer una idea general de cuanto es un mínimo necesario para vivir (o sobrevivir) en Chile tal como se establece de manera oficial.
+Si tomamos como referencia el último año (2019), podemos decir que el salario considerado justo para un obrero es de $500.000 en promedio. Este valor, a diferencia del salario mínimo, se encuentra sobre la línea de la pobreza para una familia de 4 personas, la cual equivale en ese año a $440.000 [XX cita]. Con esto no queremos decir que las personas son conscientes de la línea de la pobreza establecida periódicamente por el ministerio de desarrollo social [XX cita  ], sino que las personas parecen poseer una idea general de cuanto es un mínimo necesario para vivir (o sobrevivir) en Chile tal como se establece de manera oficial.
 
 Respecto al salario considerado justo para los gerentes, podemos ver que en general corresponde a la mitad de lo percibido para la misma ocupación. Es decir, el general de las personas cree que lo que ganan los gerentes en el país esta por sobre lo que deberían ganar, recibiendo el doble de lo justo. En suma, podemos decir en términos absolutos que la población chilena considera que la desigualdad salarial actual se encuentra lejos de lo justificado: mientras que el obrero gana prácticamente la mitad de lo que debería, los gerentes ganan el doble. Sin duda la exposición a situaciones de injusticia tiene consecuencias y es un potencial para la acción social que lleve a restaurar un equilibrio considerado justo [@homans_social_1961].
 
 ## Desigualdad relativa: Brechas percibidas y justas
 
-Para analizar la distribución de los recursos de manera relativa evaluaremos la relación entre la brecha salariales percibidas y justas. Para ello se divide en cada caso el salario del gerente por el salario del obrero, y por lo tanto se obtiene una magnitud que indica cuántas veces mas se percibe que gana un gerente en relación a un obrero (brecha percibida), así como también cuántas veces debería ganar un gerente más que un obrero (brecha justa). Como contexto, agregamos también la brecha salarial real calculada en base a la encuesta CASEN de los años respectivos.
+Para analizar la distribución de los recursos de manera relativa evaluaremos la asociación entre las brechas salariales percibidas y justas. Para ello se divide en cada caso el salario del gerente por el salario del obrero, y por lo tanto se obtiene una magnitud que indica cuántas veces mas se percibe que gana un gerente en relación a un obrero (brecha percibida), así como también cuántas veces debería ganar un gerente más que un obrero (brecha justa). Como contexto, agregamos también la brecha salarial real calculada en base a la encuesta CASEN de los años respectivos.
 
-**Grafico 3:  Comparacion de las brechas salariales obrero-gerente, percibida y  justa, entre 1999 y 2019**
+![**Grafico 3**:  Comparacion de las brechas salariales obrero-gerente, percibida y  justa, entre 1999 y 2019](output/images/Brechas.png)
 
-![](output/images/Brechas.png)
-
-**XX revisar gráfico, no calzan exactamente las brechas con los gráficos previos**
-
-
-Como muestra el gráfico 3, durante todo el período analizado la brecha considerada justa es menor a la brecha percibida, es decir, si bien la justicia no es igualdad absoluta, sí se mueve en la dirección de la igualdad o disminución de las diferencias actuales. Además, observamos que ambas brechas han disminuido. Si bien en 1999 las personas consideran que el gerente gana 33,3 veces más que el obrero, en 2019 la percepción de dicha brecha desciende a **23,3 revisar**. Si recordamos que el salario tanto del obrero como el del gerente crecieron, podemos decir que la disminución de la brecha salarial percibida no se debe a la disminución de salarios de gerentes, sino a que el salario del obrero creció más (proporcionalmente) en estos 20 años que el salario del gerente. Si bien a disminuido la brecha percibida, no ha afectado el crecimiento del ingreso de personas de alto estatus y sin lograr elevar el salario percibido de los obreros por sobre la línea de la pobreza. Ahora, si bien ha disminuido la brecha percibida, esta es todavía tres veces la brecha considerada justa.  Esto nos indica que las desigualdades en Chile exceden en gran medida lo que las personas están dispuestas a tolerar, y que esto ha ido en aumento en el tiempo a pesar de una disminución en la percepción de brechas salariales.
+Como muestra el gráfico 3, durante todo el período analizado la brecha considerada justa es menor a la brecha percibida, es decir, si bien la justicia no es igualdad absoluta, sí se mueve en la dirección de la igualdad o disminución de las diferencias actuales. Además, observamos que ambas brechas han disminuido. Si bien en 1999 las personas consideran que el gerente gana 33,3 veces más que el obrero, en 2019 la percepción de dicha brecha desciende a 22. Si recordamos que el salario tanto del obrero como el del gerente crecieron, podemos decir que la disminución de la brecha salarial percibida no se debe a la disminución de salarios de gerentes, sino a que el salario del obrero creció más (proporcionalmente) en estos 20 años que el salario del gerente. Ahora, si bien ha disminuido la brecha percibida, esta es todavía tres veces la brecha considerada justa.  Esto nos indica que las desigualdades en Chile exceden en gran medida lo que las personas están dispuestas a tolerar, y que esto ha ido en aumento en el tiempo a pesar de una disminución en la percepción de brechas salariales.
 
 Por su parte, las brechas consideradas justas también han disminuido. Mientras en 1999 las personas consideraban justo que un gerente pudiera ganar 10 veces lo que un obrero, hoy solo consideran justo que gane 7,5 veces más. En suma, en términos absolutos, podemos decir que, si bien se ha percibido un aumento de los salarios, las personas consideran injustos los sueldos tanto de los gerentes como de los obreros, los primeros por sobrevaloración y los segundos por subvaloración. Cuando se analizan las brechas queda en evidencia que en promedio la percepción de desigualdad está muy lejos de las desigualdades salariales reales, que son mucho mayores, por lo tanto hay en general una subestimación de la desigualdad salarial. Junto a ello, otro elemento llamativo es que si bien las brechas reales aumentan en el tiempo, la desigualdad percibida disminuye de una manera muy marcada el año 2019, asociado a la percepción de aumento de los salarios de ocupaciones de bajo estatus.
 
@@ -134,15 +134,11 @@ Por su parte, las brechas consideradas justas también han disminuido. Mientras 
 
 Hasta ahora hemos visto análisis de promedios generales de la población y su cambio en el tiempo. En esta sección analizaremos diferencias en percepción y justificación de desigualdad en relación a variables de estatus, para lo cual utilizaremos en primer lugar la variable de educación. Los niveles educacionales considerados se presentan en el siguiente gráfico en relación a la brecha percibida:
 
-**Grafico 4:  Brecha salarial percibida y nivel educacional entre 1999 y 2019**
+![**Grafico 4**:  Brecha salarial percibida y nivel educacional entre 1999 y 2019](output/images/gapper_educ.png)
 
-![](output/images/gapper_educ.png)
+Tal como nos muestra el gráfico 4, la brecha salarial percibida varía notoriamente entre grupos educacionales.  Destaca del gráfico que aquellos que cuentan con educación superior perciben durante todo el periodo mayores niveles de desigualdad salarial. Esto podría explicarse por sus contextos de trabajo que implican una posición intermedia o superior que les permite tener información más precisa respecto a sueldos de altos cargos [@castillo_percepcion_2012]. Durante el periodo, las diferencias perceptuales de brechas entre distintos niveles educacionales van disminuyendo, tanto en términos absolutos como relativos. Además, resulta interesante que quienes tienen nivel educacional básico o menos subestiman las desigualdades, no solo en relación con los otros grupos sino también comparando con la realidad. Según la OCDE, el 10% más rico en Chile gana 26 veces más que el 10% más pobre (**XX cita**), y suponiendo una coherencia aproximada entre estos grupos y la diada gerente obrero, podemos decir que quienes tienen menos educación subperciben la brecha real.
 
-Tal como nos muestra el gráfico 4, la brecha salarial que percibida varía notoriamente entre grupos educacionales.  Destaca del gráfico que aquellos que cuentan con educación superior perciben durante todo el periodo mayores niveles de desigualdad salarial.  Esto podría explicarse por sus contextos de trabajo que implican una posición intermedia o superior que les permite tener información más precisa respecto a sueldos de altos cargos [@castillo_percepcion_2012]. Durante el periodo, las diferencias perceptuales de brechas entre distintos niveles educacionales van disminuyendo, tanto en términos absolutos como relativos. Además, resulta interesante que quienes tienen nivel educacional básico o menos subestiman las desigualdades, no solo en relación con los otros grupos sino también comparando con la realidad. Según la OCDE, el 10% más rico en Chile gana 26 veces más que el 10% más pobre (**XX cita**), y suponiendo una coherencia aproximada entre estos grupos y la diada gerente obrero, podemos decir que quienes tienen menos educación subperciben la brecha real.
-
-**Grafico 5:  Brecha salarial justa y nivel educacional entre 1999 y 2019**
-
-![](output/images/gapjus_educ.png)
+![**Grafico 5**:  Brecha salarial justa y nivel educacional entre 1999 y 2019](output/images/gapjus_educ.png)
 
 Analizando ahora las brechas consideradas justas, se aprecia que los valores son muy distintos a las brechas percibidas. En 1999 el grupo que percibe mayores brechas considera que el gerente gana 50 veces más que el obrero, mientras considera justo que gane solo 15 veces más. El 2019 el grupo que mayor brecha percibe cree que el gerente gana 29 veces más que el obrero, mientras que considera justo solo que gane 10 veces más.  Si bien, ha disminuido la diferencia entre lo justo y lo que se percibe, aun las brechas percibidas son 3 veces más que las consideradas justas.  Podría pensarse que los grupos universitarios, en base a su esfuerzo educativo y a la mayor posibilidad de acceder a esos puestos, podrían estar más de acuerdo con las diferencias existentes, no obstante, este grupo privilegiado en la sociedad considera que las diferencias salariales son mucho mayores de lo que deberían.
 
@@ -152,22 +148,29 @@ Dado que los grupos de menor estatus son los que perciben menor desigualdad, es 
 
 En esta última parte del análisis se presentan una serie de modelos de regresión tanto de la brecha percibida como de la brecha justa, así como sus variaciones en el tiempo. Se presenta una tabla de modelos para cada año, y luego una tabla final donde se introduce el tiempo como una covariable.
 
-La Tabla X presenta los resultados de los modelos para la brecha percibida y justa, los que incluyen educación e ingreso como variables independientes. En el caso del Modelo 1 para la brecha percibida, vemos que para el primer bloque de variables de educación (que tienen la categoría Básica Completa como referencia) todas muestran diferencias significativas, es decir, mayor percepción de desigualdad en mayores niveles de educación. Lo mismo se observa en relación a quintiles de ingreso, con un aumento lineal más claro. Por lo tanto, el año 1999 se aprecia de manera bastante clara la asociación estatus-percepción de desigualdad. En el caso de la brecha justa esto sucede solo con ingreso (controlado por educación), lo cual va en línea con una hipótesis de corte racional: a mayores ingresos, mayor justificación de la desigualdad. Sin embargo, vemos que estos efectos se anulan al momento de incorporar la percepción de desigualdad en el Modelo 3. Esto sugiere que si bien existen diferencias de estatus en percepción y justificación de desigualdad, cuando se considera la desigualdad percibida el estatus no genera diferencias en la percepción de la desigualdad. Dicho de otra manera, la diferencia entre percepción y justificación es similar para los distintos grupos de estatus, lo cual va en línea con una hipótesis de consenso entre distintos grupos de estatus respecto a la justificación de la desigualdad.
+La Tabla 2 presenta los resultados de los modelos para la brecha percibida y justa, los que incluyen educación e ingreso como variables independientes. En el caso del Modelo 1 para la brecha percibida, vemos que para el primer bloque de variables de educación (que tienen la categoría Básica Completa como referencia) todas muestran diferencias significativas, es decir, mayor percepción de desigualdad en mayores niveles de educación. Lo mismo se observa en relación a quintiles de ingreso, con un aumento lineal más claro. Por lo tanto, el año 1999 se aprecia de manera bastante clara la asociación estatus-percepción de desigualdad. En el caso de la brecha justa esto sucede solo con ingreso (controlado por educación), lo cual va en línea con una hipótesis de corte racional: a mayores ingresos, mayor justificación de la desigualdad. Sin embargo, vemos que estos efectos se anulan al momento de incorporar la percepción de desigualdad en el Modelo 3. Esto sugiere que si bien existen diferencias de estatus en percepción y justificación de desigualdad, cuando se considera la desigualdad percibida el estatus no genera diferencias en la percepción de la desigualdad. Dicho de otra manera, la diferencia entre percepción y justificación es similar para los distintos grupos de estatus, lo cual va en línea con una hipótesis de consenso entre distintos grupos de estatus respecto a la justificación de la desigualdad.
 
+**Tabla 2**: Modelos de regresión para brecha percibida y justa - Año 1999
 
-<object width="800" height="800" data="output/tables/table99.html"></object>
+<object width="800" height="750" data="output/tables/table99.html"></object>
 
 Respecto del año 2009, vemos en la tabla X una tendencia similar para brecha percibida tanto en ingresos como educación, si bien menos marcada que en 1999. También comparando con la ola anterior las diferencias aparecen más claras en la brecha justa, donde educación (principalmente a nivel universitario) aparece con un efecto significativo, además del de ingreso. En cuanto al modelo 3 con la brecha percibida como covariable se observa que el coeficiente asociado a la pertenencia al mayor quintil de ingresos ahora es significativo. Por lo tanto, aquellos pertencientes a este grupo justifican mayor desigualdad independiente de la desigualdad percibida.
 
-<object width="800" height="800" data="output/tables/table09.html"></object>
+**Tabla 3**: Modelos de regresión para brecha percibida y justa - Año 2009
+
+<object width="800" height="750" data="output/tables/table09.html"></object>
 
 En la tabla final de esta secuencia, correspondiente al año 2019, vemos que en la brecha percibida hay solo evidencia de la influencia de la educación en la brecha percibida, mientras en la brecha justa ya no existen diferencias entre los grupos de estatus. Recordemos que la disminución de las diferencias entre grupos de estatus ya era posible de observar en los gráficos sobre educación y brechas, donde hacia el 2019 se presenta una clara tendencia al consenso entre grupos educacionales tanto respecto de la brecha percibida como de la brecha justa.
 
-<object width="800" height="800" data="output/tables/table19.html"></object>
+**Tabla 4**: Modelos de regresión para brecha percibida y justa - Año 2019
 
-Finalmente, la tabla
+<object width="800" height="750" data="output/tables/table19.html"></object>
 
+Finalmente, la tabla X presenta los modelos para todos los años, incluyendo el año como una covariable que toma como referencia la primera ola de 1999. Dos aspectos a destacar de esta tabla son a) que las variables de estatus se asocian de manera positiva con la brecha percibida y también con brecha justa, aunque con menor intensidad en el caso de la última, y b) que el año 2019 es el que presenta una diferencia respecto de los dos anteriores en la disminución tanto de la brecha justa como de la brecha percibida.
 
+**Tabla 5**: Modelos de regresión para brecha percibida y justa en 1999, 2009 y 2019.
+
+<object width="800" height="800" data="output/tables/table_gapyear.html"></object>
 
 # A modo de conclusión
 
