--- a/paper.Rmd
+++ b/paper.Rmd
@@ -6,7 +6,7 @@ output:
         smart: false
         toc: true
         number_sections: true
-bibliography: "input/bib/Link to My Library.bib"
+bibliography: "input/bib/My Library.bib"
 csl: "input/bib/apa6.csl"
 ---
 
@@ -84,14 +84,14 @@ En general las teorías respecto a los determinantes de las preferencias conside
 
 # Datos, variables y métodos
 
-El ISSP es un proyecto de colaboración internacional sobre encuestas que cubre un amplia gama de temas relevantes para las ciencias sociales. Comenzó en 1983 en cuatro paises (Alemania, Estados Unidos, Gran Bretaña y Australia), y hasta ahora se ha ampliado para incluir más de 40 países. Dado su carácter colaborativo, cada país miembro debe contribuir con fondos para implementar la encuesta, y generalmente el El cuestionario ISSP se administra como parte de las encuestas nacionales existentes. En el caso chileno, las encuestas son gestionadas por el Centro de Estudios Publicos (CEP).  
+El ISSP es un proyecto de colaboración internacional sobre encuestas que cubre un amplia gama de temas relevantes para las ciencias sociales. Comenzó en 1983 en cuatro paises (Alemania, Estados Unidos, Gran Bretaña y Australia), y hasta ahora se ha ampliado para incluir más de 40 países. Dado su carácter colaborativo, cada país miembro debe contribuir con fondos para implementar la encuesta, y generalmente el El cuestionario ISSP se administra como parte de las encuestas nacionales existentes. En el caso chileno, las encuestas son gestionadas por el Centro de Estudios Publicos (CEP).
 Cada año, la encuesta cubre un tema en particular que se repite unos años más tarde, permitiendo comparaciones de tiempo. Los temas son decididos por un subcomité formado por representantes de los paises participantes. Luego se escribe un cuestionario general en inglés para ser traducido más tarde en los idiomas específicos de cada contexto. Una vez que la información es recopilada y proporcionada por cada país, los datos se archivan en Gesis en Alemania, con soporte en el procesamiento de los datos de la ASEP (Análisis Sociológico Ógicos Económicos y Políticos) en Madrid.
-La desigualdad social fue el tema de investigación para los módulos del ISSP 1987, 1992, 1999, 2009 y 2019. Esta encuesta incluye una serie de ítems de actitud con respecto al ingreso distribución, percepción de desigualdad, principios distributivos y expectativas sobre El papel del estado con respecto a la desigualdad social, así como las preguntas sobre la percepción y evaluación del ingreso ocupacional. La implementacion de este programa en Chile comienza en 1998,  y hasta la fecha, se cuenta con tres olas de la encuesta sobre desigualdad social. La encuesta del 2019, aun no ha sido fusionada con las encuestas de los otros paises, por lo que solo contamos con la base de datos construida por el CEP dispoblibe en su pagina oficial (www.cepchile.cl). 	Las encuestas de 1999, 2009 y 2019 son representativas a nivel nacional, se realizan cara a cara e incorporan 1503, 1505 y 1380 casos, respectivamente. 
-La principal variable dependiente del estudio es la justificación de la desigualdad económica, operacionalizada a través de la brecha salarial justa. El ISSP incluye preguntas en las que se solicita a los encuestados que declaren los salarios que consideran justos para ocupaciones de bajo y alto estatus. Como se explico anteriormente, la brecha justa es la razon entre el salario considerado justo para el gerente y el salario considerado justo para el obrero no calificado. Dicha variable, debe ser leida como cuantas veces más se considera justo que gane un gerente respecto a un obrero. Por ejemplo, si dicha brecha es igual a 2, se considera justo que el gerente gane el doble que el obrero. El mismo prosedimiento se utilizo para la variable independiente brecha percibida, la cual corresponde a cuantas veces más creen los encuestados que gana un gerente respecto a un obrero. Ademas, para incluir estas dos variables en los modelos de regresion, fueron normalizadas a partir de un logaritmo. 
+La desigualdad social fue el tema de investigación para los módulos del ISSP 1987, 1992, 1999, 2009 y 2019. Esta encuesta incluye una serie de ítems de actitud con respecto al ingreso distribución, percepción de desigualdad, principios distributivos y expectativas sobre El papel del estado con respecto a la desigualdad social, así como las preguntas sobre la percepción y evaluación del ingreso ocupacional. La implementacion de este programa en Chile comienza en 1998,  y hasta la fecha, se cuenta con tres olas de la encuesta sobre desigualdad social. La encuesta del 2019, aun no ha sido fusionada con las encuestas de los otros paises, por lo que solo contamos con la base de datos construida por el CEP dispoblibe en su pagina oficial (www.cepchile.cl). 	Las encuestas de 1999, 2009 y 2019 son representativas a nivel nacional, se realizan cara a cara e incorporan 1503, 1505 y 1380 casos, respectivamente.
+La principal variable dependiente del estudio es la justificación de la desigualdad económica, operacionalizada a través de la brecha salarial justa. El ISSP incluye preguntas en las que se solicita a los encuestados que declaren los salarios que consideran justos para ocupaciones de bajo y alto estatus. Como se explico anteriormente, la brecha justa es la razon entre el salario considerado justo para el gerente y el salario considerado justo para el obrero no calificado. Dicha variable, debe ser leida como cuantas veces más se considera justo que gane un gerente respecto a un obrero. Por ejemplo, si dicha brecha es igual a 2, se considera justo que el gerente gane el doble que el obrero. El mismo prosedimiento se utilizo para la variable independiente brecha percibida, la cual corresponde a cuantas veces más creen los encuestados que gana un gerente respecto a un obrero. Ademas, para incluir estas dos variables en los modelos de regresion, fueron normalizadas a partir de un logaritmo.
 
-Como variables de control para las regresiones se incluyen los ingresos (operacionalizados como los quintiles de ingresos percapita del hogar) y la educacion (considerando los niveles: primaria, secundaria, tercearia no univercitaria y univercitaria). A continuacion, en la tabla 1, se presentan descriptivos para todas las variables mensionasdas. 
+Como variables de control para las regresiones se incluyen los ingresos (operacionalizados como los quintiles de ingresos percapita del hogar) y la educacion (considerando los niveles: primaria, secundaria, tercearia no univercitaria y univercitaria). A continuacion, en la tabla 1, se presentan descriptivos para todas las variables mensionasdas.
 
-<!-- Hay dos tablas, la segunda es con stargazer y la primera con psych, desida usted con cual quedarnos. 
+<!-- Hay dos tablas, la segunda es con stargazer y la primera con psych, desida usted con cual quedarnos.
 -->
 **Tabla 1**: Descriptivos generales 1999-2019
 
